--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,6 +12,8 @@
     --dark-clr-2:white;
     --dark-clr-3:white;
     --dark-clr-4:white;
+
+    --header-height:3vh;
 }
 
 *{
@@ -24,37 +26,38 @@ main{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    
-    
 }
 
+header{
+    height: var(--header-height);
+}
 
 h1, #principal{
     text-align: center;
     position: absolute;
     margin: auto;
-    left: 25%;
-    width: 50%;
+    left: 50vw;
+    margin-left: -25vw;
+    width: 50vw;
 }
 
 h1{
-    top: 15%;
+    top: 15vh;
+    font-size: 3rem;
 }
 
 #principal{
-    top: 30%;
+    top: calc(35vh - var(--header-height));
+    height: calc(30vh - var(--header-height));
+
 }
-
-
 
 div[id*='bg-']{
     width: 50%;
-    height: 50vh;
-    border: 1rem solid red;
-
+    height: calc(50vh - var(--header-height)/2);
 }
 
 
-#section-1 {
-    background: linear-gradient(45deg, var(--light-clr-1), var(--light-clr-2), var(--light-clr-3), var(--light-clr-4)  );
+#bg-section1 {
+    background: linear-gradient(-45deg, var(--light-clr-1), var(--light-clr-2), var(--light-clr-3), var(--light-clr-4)  );
 }
