--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@
     --dark-clr-4:white;
 
     --header-height:3vh;
+    --main-items-width:40vw;
 }
 
 *{
@@ -32,13 +33,34 @@ header{
     height: var(--header-height);
 }
 
+#bg-section1{
+    background: repeating-linear-gradient(-45deg, var(--light-clr-1), var(--light-clr-1) 5vh, var(--light-clr-2) 5vh, var(--light-clr-2) 10vh, var(--light-clr-3) 10vh, var(--light-clr-3) 15vh, var(--light-clr-4)  15vh, var(--light-clr-4)  20vh);
+}
+
+#bg-section2{
+    background: repeating-linear-gradient(45deg, var(--light-clr-2), var(--light-clr-2) 5vh, var(--light-clr-3) 5vh, var(--light-clr-3) 10vh, var(--light-clr-4) 10vh, var(--light-clr-4) 15vh, var(--light-clr-1)  15vh, var(--light-clr-1)  20vh);
+}
+
+div[id*='bg-']{
+    width: 50%;
+    height: calc(50vh - var(--header-height)/2);
+}
+
+#bg-section3{
+    background: repeating-linear-gradient(-135deg, var(--light-clr-3), var(--light-clr-3) 5vh, var(--light-clr-4) 5vh, var(--light-clr-4) 10vh, var(--light-clr-1) 10vh, var(--light-clr-1) 15vh, var(--light-clr-2)  15vh, var(--light-clr-2)  20vh);
+}
+
+#bg-section4{
+    background: repeating-linear-gradient(135deg, var(--light-clr-4), var(--light-clr-4) 5vh, var(--light-clr-1) 5vh, var(--light-clr-1) 10vh, var(--light-clr-2) 10vh, var(--light-clr-2) 15vh, var(--light-clr-3)  15vh, var(--light-clr-3)  20vh);
+}
+
 h1, #principal{
     text-align: center;
     position: absolute;
     margin: auto;
     left: 50vw;
-    margin-left: -25vw;
-    width: 50vw;
+    margin-left: calc(var(--main-items-width)/(-2));
+    width: var(--main-items-width);
 }
 
 h1{
@@ -47,32 +69,29 @@ h1{
 }
 
 #principal{
-    top: calc(35vh - var(--header-height));
-    height: calc(30vh - var(--header-height));
-
+    top: calc(42vh - var(--header-height));
 }
 
-div[id*='bg-']{
-    width: 50%;
-    height: calc(50vh - var(--header-height)/2);
+#principal h2{
+    font-size: 2rem;
+    margin-bottom: 3vh;
 }
 
-#bg-section1{
-    background: repeating-linear-gradient(-45deg, var(--light-clr-1), var(--light-clr-1) 5vh, var(--light-clr-2) 5vh, var(--light-clr-2) 10vh, var(--light-clr-3) 10vh, var(--light-clr-3) 15vh, var(--light-clr-4)  15vh, var(--light-clr-4)  20vh);
-
+#principal label{
+    font-size: 1.5rem;
+    display: block;
+    text-align: left;
+    margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
 }
 
-#bg-section2{
-    background: repeating-linear-gradient(45deg, var(--light-clr-2), var(--light-clr-2) 5vh, var(--light-clr-3) 5vh, var(--light-clr-3) 10vh, var(--light-clr-4) 10vh, var(--light-clr-4) 15vh, var(--light-clr-1)  15vh, var(--light-clr-1)  20vh);
-
+#principal input{
+    width: 100%;
+    display: block;
+    text-align: left;
+    margin-bottom: 1rem;
 }
 
-#bg-section3{
-    background: repeating-linear-gradient(-135deg, var(--light-clr-3), var(--light-clr-3) 5vh, var(--light-clr-4) 5vh, var(--light-clr-4) 10vh, var(--light-clr-1) 10vh, var(--light-clr-1) 15vh, var(--light-clr-2)  15vh, var(--light-clr-2)  20vh);
-
-}
-
-#bg-section4{
-    background: repeating-linear-gradient(135deg, var(--light-clr-4), var(--light-clr-4) 5vh, var(--light-clr-1) 5vh, var(--light-clr-1) 10vh, var(--light-clr-2) 10vh, var(--light-clr-2) 15vh, var(--light-clr-3)  15vh, var(--light-clr-3)  20vh);
-
+#principal button{
+    margin-top: 2vh;
 }
