--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -13,8 +13,8 @@
     --dark-clr-3:white;
     --dark-clr-4:white;
 
-    --header-height:9vh;
-    --footer-height:10vh;
+    --header-height:6vh;
+    --footer-height:14vh;
     --content-top-margin: 0.5rem;
 }
 
@@ -33,8 +33,8 @@ body{
 
 header{
     height: var(--header-height);
-
     display: block;
+    z-index: 1;
 }
 
 main{
@@ -42,39 +42,56 @@ main{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    
 }
 
 #content{
     position: absolute;
     display: flex;
-    justify-content: center;
-    align-content: flex-start;
-    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
     height: 95%;
     width: 100%;
-    padding-top: calc(var(--footer-height) + var(--content-top-margin) - 1rem);
-    
+    padding-top: calc(3*var(--footer-height) - 2.2*var(--footer-height));
+    overflow-y: auto;
+    scrollbar-color: #d1172e #fff;
+    z-index: 0;
 }
 
 #content > .blog-post{
-    height: 15%;
+    height: 9rem;
+    align-self: center;
+    min-height: 9rem;
     max-height: 9rem;
     width: 95%;
     background-color: #fff5f5bb;
     margin: var(--content-top-margin);
     border-radius: 1.5rem;
+    
 }
 
 footer{
-    padding: 1rem 2rem;
-    margin: 1vh;
+    display: flex;
+    flex-direction: column;
+
+    padding: 1.5rem 2rem;
     height: var(--footer-height);
+    z-index: 1;
+}
+footer p{
+    padding: 0.2rem 1rem;
+
+}
+
+footer p:first-child{
+    align-self: center;
+
 }
 
 div[id*='bg-']{
     width: 50%;
     height: calc(50vh - (var(--header-height) + var(--footer-height))/2);
+    z-index: -2;
 }
 
 #bg-section1{
