--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -82,7 +82,10 @@ main{
     z-index: 0;
 }
 
-#content > .blog-post{
+#content .blog-post{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     height: 9rem;
     align-self: center;
     min-height: 9rem;
@@ -92,7 +95,19 @@ main{
     margin: var(--content-top-margin);
     border-radius: 1.5rem;
     padding: 1rem;
-    
+}
+
+#content .blog-post p:nth-child(1){
+    border-bottom: 0.2rem solid;
+    margin-bottom: 1rem;
+}
+
+#content .blog-post p:nth-child(2){
+    padding-left: 1rem;
+}
+
+#content .blog-post p:nth-child(3){
+    font-size: 0.85rem;
 }
 
 footer{
@@ -102,10 +117,10 @@ footer{
     height: var(--footer-height);
     z-index: 1;
 }
+
 footer p{
     padding: 0.3rem 1rem;
     line-height: var(--footer-line-height);
-
 }
 
 footer p:first-child{
