styling blog posts p

--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -97,16 +97,16 @@ main{
     padding: 1rem;
 }
 
-#content .blog-post p:nth-child(1){
+.t-c p:nth-child(1){
     border-bottom: 0.2rem solid;
     margin-bottom: 1rem;
 }
 
-#content .blog-post p:nth-child(2){
+.t-c p:nth-child(2){
     padding-left: 1rem;
 }
 
-#content .blog-post p:nth-child(3){
+.blog-post .user{
     font-size: 0.85rem;
 }
 
