--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,12 +6,18 @@
     --light-clr-3: #F96161;
     --light-clr-4: #E1E9B7;
 
-    --dark-text:black;
+    --dark-text:white;
     --dark-bg:white;
-    --dark-clr-1:white;
-    --dark-clr-2:white;
-    --dark-clr-3:white;
-    --dark-clr-4:white;
+    --dark-clr-1:#11233B;
+    --dark-clr-2:#232021;
+    --dark-clr-3:#4B473C;
+    --dark-clr-4:#060C13;
+
+    --gradient-ref-1:5vh;
+    --gradient-ref-2:10vh;
+    --gradient-ref-3:15vh;
+    --gradient-ref-4:20vh;
+    --gradient-off:1vh;
 
     --header-height: 9vh;
     --main-items-width:40vw;
@@ -59,20 +65,65 @@ div[class*='bg-']{
 }
 
 .bg-section1.light{
-    background: repeating-linear-gradient(-45deg, var(--light-clr-1), var(--light-clr-1) 5vh, var(--light-clr-2) 5vh, var(--light-clr-2) 10vh, var(--light-clr-3) 10vh, var(--light-clr-3) 15vh, var(--light-clr-4)  15vh, var(--light-clr-4)  20vh);
+    background: repeating-linear-gradient(-45deg, var(--light-clr-1), var(--light-clr-1) var(--gradient-ref-1), var(--light-clr-2) var(--gradient-ref-1), var(--light-clr-2) var(--gradient-ref-2), var(--light-clr-3) var(--gradient-ref-2), var(--light-clr-3) var(--gradient-ref-3), var(--light-clr-4)  var(--gradient-ref-3), var(--light-clr-4)  var(--gradient-ref-4));
 }
 
 .bg-section2.light{
-    background: repeating-linear-gradient(45deg, var(--light-clr-2), var(--light-clr-2) 5vh, var(--light-clr-3) 5vh, var(--light-clr-3) 10vh, var(--light-clr-4) 10vh, var(--light-clr-4) 15vh, var(--light-clr-1)  15vh, var(--light-clr-1)  20vh);
+    background: repeating-linear-gradient(45deg, var(--light-clr-2), var(--light-clr-2) var(--gradient-ref-1), var(--light-clr-3) var(--gradient-ref-1), var(--light-clr-3) var(--gradient-ref-2), var(--light-clr-4) var(--gradient-ref-2), var(--light-clr-4) var(--gradient-ref-3), var(--light-clr-1)  var(--gradient-ref-3), var(--light-clr-1)  var(--gradient-ref-4));
 }
 
 .bg-section3.light{
-    background: repeating-linear-gradient(-135deg, var(--light-clr-3), var(--light-clr-3) 5vh, var(--light-clr-4) 5vh, var(--light-clr-4) 10vh, var(--light-clr-1) 10vh, var(--light-clr-1) 15vh, var(--light-clr-2)  15vh, var(--light-clr-2)  20vh);
+    background: repeating-linear-gradient(-135deg, var(--light-clr-3), var(--light-clr-3) var(--gradient-ref-1), var(--light-clr-4) var(--gradient-ref-1), var(--light-clr-4) var(--gradient-ref-2), var(--light-clr-1) var(--gradient-ref-2), var(--light-clr-1) var(--gradient-ref-3), var(--light-clr-2)  var(--gradient-ref-3), var(--light-clr-2)  var(--gradient-ref-4));
 }
 
 .bg-section4.light{
-    background: repeating-linear-gradient(135deg, var(--light-clr-4), var(--light-clr-4) 5vh, var(--light-clr-1) 5vh, var(--light-clr-1) 10vh, var(--light-clr-2) 10vh, var(--light-clr-2) 15vh, var(--light-clr-3)  15vh, var(--light-clr-3)  20vh);
+    background: repeating-linear-gradient(135deg, var(--light-clr-4), var(--light-clr-4) var(--gradient-ref-1), var(--light-clr-1) var(--gradient-ref-1), var(--light-clr-1) var(--gradient-ref-2), var(--light-clr-2) var(--gradient-ref-2), var(--light-clr-2) var(--gradient-ref-3), var(--light-clr-3)  var(--gradient-ref-3), var(--light-clr-3)  var(--gradient-ref-4));
 }
+
+.bg-section1.dark{
+    background: repeating-linear-gradient(-45deg, black, var(--dark-clr-1) 
+    calc(var(--gradient-ref-1) - var(--gradient-off)), var(--dark-clr-2) 
+    calc(var(--gradient-ref-1) + var(--gradient-off)), var(--dark-clr-2) 
+    calc(var(--gradient-ref-2) - var(--gradient-off)), var(--dark-clr-3) 
+    calc(var(--gradient-ref-2) + var(--gradient-off)), var(--dark-clr-3) 
+    calc(var(--gradient-ref-3) - var(--gradient-off)), var(--dark-clr-4)  
+    calc(var(--gradient-ref-3) + var(--gradient-off)), var(--dark-clr-4)  
+    calc(var(--gradient-ref-4) - var(--gradient-off)), black 24vh);
+}
+
+.bg-section2.dark{
+    background: repeating-linear-gradient(45deg, black, var(--dark-clr-2) 
+    calc(var(--gradient-ref-1) - var(--gradient-off)), var(--dark-clr-3) 
+    calc(var(--gradient-ref-1) + var(--gradient-off)), var(--dark-clr-3) 
+    calc(var(--gradient-ref-2) - var(--gradient-off)), var(--dark-clr-4) 
+    calc(var(--gradient-ref-2) + var(--gradient-off)), var(--dark-clr-4) 
+    calc(var(--gradient-ref-3) - var(--gradient-off)), var(--dark-clr-1)  
+    calc(var(--gradient-ref-3) + var(--gradient-off)), var(--dark-clr-1)  
+    calc(var(--gradient-ref-4) - var(--gradient-off)), black 24vh);
+}
+
+.bg-section3.dark{
+    background: repeating-linear-gradient(-135deg, black, var(--dark-clr-3) 
+    calc(var(--gradient-ref-1) - var(--gradient-off)), var(--dark-clr-4) 
+    calc(var(--gradient-ref-1) + var(--gradient-off)), var(--dark-clr-4) 
+    calc(var(--gradient-ref-2) - var(--gradient-off)), var(--dark-clr-1) 
+    calc(var(--gradient-ref-2) + var(--gradient-off)), var(--dark-clr-1) 
+    calc(var(--gradient-ref-3) - var(--gradient-off)), var(--dark-clr-2)  
+    calc(var(--gradient-ref-3) + var(--gradient-off)), var(--dark-clr-2)  
+    calc(var(--gradient-ref-4) - var(--gradient-off)), black 24vh);
+}
+
+.bg-section4.dark{
+    background: repeating-linear-gradient(135deg, black, var(--dark-clr-4) 
+    calc(var(--gradient-ref-1) - var(--gradient-off)), var(--dark-clr-1) 
+    calc(var(--gradient-ref-1) + var(--gradient-off)), var(--dark-clr-1) 
+    calc(var(--gradient-ref-2) - var(--gradient-off)), var(--dark-clr-2) 
+    calc(var(--gradient-ref-2) + var(--gradient-off)), var(--dark-clr-2) 
+    calc(var(--gradient-ref-3) - var(--gradient-off)), var(--dark-clr-3)  
+    calc(var(--gradient-ref-3) + var(--gradient-off)), var(--dark-clr-3)  
+    calc(var(--gradient-ref-4) - var(--gradient-off)), black 24vh);
+}
+
 
 h1, #principal{
     position: absolute;
