--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -70,6 +70,31 @@ header div{
     width: 15vw;
 }
 
+#buttons{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 2vw;
+}
+
+#back{
+    height: calc(var(--button-size) *0.5);
+    width: var(--button-size);
+}
+
+#back.light{
+    background-color: #9b750d;
+    color: #ffffff;
+    border: 0;
+}
+
+#back.dark{
+    background-color: #1d20c9;
+    color: #ffffff;
+    border: 0;
+}
+
 #mode-change{
     height: var(--button-size);
     width: var(--button-size);
