styling buttons accarrangement

--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -67,20 +67,20 @@ header h1.dark{
 }
 
 header div{
-    width: 15vw;
+    width: 30vw;
 }
 
 #buttons{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
     align-items: center;
-    margin-right: 2vw;
+    margin-right: 1.5vw;
 }
 
 #back{
-    height: calc(var(--button-size) *0.5);
-    width: var(--button-size);
+    height: calc(var(--button-size) * 0.6);
+    width: calc(var(--button-size)* 1.2);
+    margin-right: 1.5vw;
 }
 
 #back.light{
@@ -102,6 +102,7 @@ header div{
     background-repeat: no-repeat;
     border-radius: 900px;
     border: 0;
+    margin-right:  1.5vw;
 }
 
 #mode-change.dark{
